--- a/public/style.css
+++ b/public/style.css
@@ -24,6 +24,10 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.image {
+      max-width: 80%;
+  }
+
 .topnav {
   overflow: hidden;
   background-color: #333;
