--- a/public/style.css
+++ b/public/style.css
@@ -6,7 +6,11 @@ body {
   background-color: white;
   padding: 20px;
 }
-
+.logo{
+  width:350px;
+  padding-top: 40px;
+  padding-bottom: 10px;
+}
 h1 {
   color: #36454f;
 }
